syntax = "proto3";

package trpc.test.shopping;

service StreamShopping {
  // Client streaming
  rpc ClientStreamShopping (stream ShoppingRequest) returns (ShoppingReply) {}

  // Server streaming
  rpc ServerStreamShopping (ShoppingRequest) returns (stream ShoppingReply) {}

  // Bidi streaming
  rpc BidiStreamShopping (stream ShoppingRequest) returns (stream ShoppingReply) {}
}

message ShoppingRequest {
  string msg = 1;
  int32 purchase_count = 2;
}

message ShoppingReply {
  string msg = 1;
  bool success = 2;
  int32 remaining_stock = 3;
}
